# krill-media-storage

./: CMakeLists.txt  MediaInfoDLL.h  README.md  TableModel.cpp  TableModel.h  databasecontroller.cpp  databasecontroller.h  html.rar  index.html  main.cpp  mainResources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadataextractor.cpp  metadataextractor.h  sqlite3.h
assets/: addFileIcon  audioIcon  deleteIcon  imageIcon  mainIcon  updateIcon  videoIcon
